--- a/bsconfig.json
+++ b/bsconfig.json
@@ -11,7 +11,7 @@
       "type": "dev"
     }
   ],
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["@rescript/react"],
   "bsc-flags": ["-bs-super-errors"],
   "reason": {
     "react-jsx": 3
