--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "Grégoire Van der Auwermeulen <gregoirevandera@gmail.com>",
   "devDependencies": {
     "@baransu/graphql_ppx_re": "^0.7.1",
-    "bs-platform": "^7.2.2",
+    "@rescript/react": "^0.10.3",
+    "bs-platform": "^9.0.2",
     "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
-    "reason-react": "^0.7.0"
+    "lint-staged": "^8.1.0"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.0",
